%% 실은 — 상세 ERD (기획서 섹션 10 기반)
%% 원본(memories/assets) ↔ AI 생성물(differences/diaries) 분리로 근거 추적 가능
%% ADR-0002 반영: 근거 조인 테이블 · 타입별 임베딩 · deletion ledger
erDiagram
    USERS ||--o{ MEMORIES : "기록"
    USERS ||--o{ ENTITIES : "소유"
    USERS ||--o{ SIGNALS : "신호"
    USERS ||--o{ BASELINES : "평소모델"
    USERS ||--o{ DIFFERENCES : "차이"
    USERS ||--o{ DIARIES : "일기"
    USERS ||--o{ CONSENTS : "동의"
    USERS ||--o{ WEEKLY_REPORTS : "리포트"
    USERS ||..o{ DELETIONS : "삭제요청(FK 없음)"

    MEMORIES ||--o{ ASSETS : "첨부"
    MEMORIES ||--o{ EMOTIONS : "감정"
    MEMORIES ||--o{ MEMORY_ENTITIES : "언급"
    ENTITIES ||--o{ MEMORY_ENTITIES : "등장"
    ENTITIES ||--o{ RELATIONS : "출발"
    ENTITIES ||--o{ RELATIONS : "도착"
    MEMORIES ||--o{ RELATIONS : "근거"

    SIGNALS }o--|| BASELINES : "집계"
    BASELINES ||--o{ DIFFERENCES : "이탈판정"

    %% ADR-0002 ①② 근거·출처는 배열이 아니라 조인 테이블 (다대다·삭제 역추적)
    DIFFERENCES ||--o{ DIFFERENCE_EVIDENCE : "근거"
    MEMORIES ||--o{ DIFFERENCE_EVIDENCE : "근거로쓰임"
    DIARIES ||--o{ DIARY_SOURCES : "출처"
    MEMORIES ||--o{ DIARY_SOURCES : "출처로쓰임"

    DIARIES ||--o{ DIARY_SECTIONS : "구성"
    DIFFERENCES ||--o{ DIARY_SECTIONS : "반영"

    %% ADR-0002 ③ 폴리모픽 대신 타입별 분리 (FK CASCADE로 고아 벡터 차단)
    MEMORIES ||--o| MEMORY_EMBEDDINGS : "임베딩"
    ASSETS ||--o| ASSET_EMBEDDINGS : "임베딩(OCR/STT)"
    DIARIES ||--o| DIARY_EMBEDDINGS : "임베딩"

    %% ADR-0002 highlights 스냅샷 대신 참조 (삭제 방어선 안으로)
    WEEKLY_REPORTS ||--o{ WEEKLY_REPORT_HIGHLIGHTS : "하이라이트"
    DIFFERENCES ||--o{ WEEKLY_REPORT_HIGHLIGHTS : "선정됨"

    USERS {
        uuid id PK "auth.users(id) 참조. email은 auth.users가 단일 출처"
        text display_name
        jsonb style_profile "기본 톤 프리셋"
        time diary_time "일기 생성 시각"
        text timezone "하루 경계 기준(backend.md)"
        timestamptz created_at
    }

    MEMORIES {
        uuid id PK
        uuid user_id FK
        timestamptz captured_at "기록한 시각"
        timestamptz occurred_at "실제 일어난 시각(선택)"
        text raw_text "원본 메모(불변)"
        text source_type "manual|share|sensor|ocr|stt"
        text memory_type "moment|thought|event"
        jsonb metadata "위치라벨·출처앱 등"
        bool is_locked "검색/일기/탐지 제외"
        timestamptz deleted_at "soft delete"
    }

    ASSETS {
        uuid id PK
        uuid memory_id FK
        text asset_type "photo|voice|link"
        text file_url
        text extracted_text "한국어 OCR"
        text transcription "STT"
        text mime_type
    }

    EMOTIONS {
        uuid id PK
        uuid memory_id FK
        float valence "-1..+1"
        text tags "가벼운 감정 태그(배열)"
        float confidence
        bool confirmed_by_user "유저 보정"
    }

    ENTITIES {
        uuid id PK
        uuid user_id FK
        text entity_type "person|place|activity|thing"
        text name
        text normalized_name "보수적 병합 키"
    }

    MEMORY_ENTITIES {
        uuid memory_id FK
        uuid entity_id FK
        text relation_type "met|visited|did"
        float confidence
        bool confirmed_by_user
    }

    RELATIONS {
        uuid id PK
        uuid source_entity_id FK
        uuid target_entity_id FK
        text relation_type
        float confidence
        uuid source_memory_id FK "근거 메모"
    }

    SIGNALS {
        uuid id PK
        uuid user_id FK
        text signal_type "steps|sleep|screen|checkin"
        float value
        timestamptz observed_at
        text source "sensor|derived"
    }

    BASELINES {
        uuid id PK
        uuid user_id FK
        text dimension "퇴근시간|걸음|외식빈도|요일기분"
        jsonb stat "mean/std/ma/seasonality"
        text window_spec "7d|28d|dow — window는 PostgreSQL 예약어"
        timestamptz updated_at
    }

    DIFFERENCES {
        uuid id PK
        uuid user_id FK
        date date
        text dimension
        text description "탐지 근거(사람용 아님)"
        text detection_method "zscore|first_occurrence|freq_shift|pattern"
        float confidence
        text status "candidate|confirmed|dismissed"
        text category "오늘의다른점|성취|감정전환|패턴"
        text evidence_state "intact|stale — 근거 훼손 시 stale, description 파기"
        timestamptz staled_at
    }

    DIFFERENCE_EVIDENCE {
        uuid difference_id FK "PK, ON DELETE CASCADE"
        uuid memory_id FK "PK, ON DELETE CASCADE"
    }

    DIARIES {
        uuid id PK
        uuid user_id FK
        date date
        text status "draft|edited|confirmed"
        jsonb style_profile "그날 적용 톤"
        text generated_text "AI 초안(불변)"
        text edited_text "유저 확정본"
    }

    DIARY_SOURCES {
        uuid diary_id FK "PK, ON DELETE CASCADE"
        uuid memory_id FK "PK, ON DELETE CASCADE"
    }

    DIARY_SECTIONS {
        uuid id PK
        uuid diary_id FK
        text section_type "오늘의한문장|본문|다른점|성취"
        text content
    }

    MEMORY_EMBEDDINGS {
        uuid id PK
        uuid user_id FK "비정규화 — 벡터 질의 선필터"
        uuid memory_id FK "UNIQUE NOT NULL, ON DELETE CASCADE"
        vector embedding "pgvector, HNSW"
        text model
        bool is_searchable "비정규화 — is_locked/deleted_at 반영, 트리거 동기화"
    }

    ASSET_EMBEDDINGS {
        uuid id PK
        uuid user_id FK "비정규화"
        uuid asset_id FK "UNIQUE NOT NULL, ON DELETE CASCADE"
        vector embedding "memory_embeddings와 동일 모델·차원(UNION 비교)"
        text model
        bool is_searchable "부모 memory의 잠금까지 연쇄"
    }

    DIARY_EMBEDDINGS {
        uuid id PK
        uuid user_id FK "비정규화"
        uuid diary_id FK "UNIQUE NOT NULL, ON DELETE CASCADE"
        vector embedding "검색 뷰 밖 — 회고는 원본만 인용"
        text model
        bool is_searchable
    }

    CONSENTS {
        uuid id PK
        uuid user_id FK
        text source "steps|location|music|..."
        text scope "읽기/파생저장 범위"
        timestamptz granted_at
        timestamptz revoked_at "해제 시 파생 삭제"
    }

    WEEKLY_REPORTS {
        uuid id PK
        uuid user_id FK
        text week "ISO week"
    }

    WEEKLY_REPORT_HIGHLIGHTS {
        uuid report_id FK "PK, ON DELETE CASCADE"
        uuid difference_id FK "PK, ON DELETE CASCADE"
        text slot "가장많이한것|처음한것|감정순간"
        int rank
    }

    DELETIONS {
        uuid id PK
        uuid user_id "users FK 없음 — 대상보다 오래 살아야 재개 가능"
        text trigger "memory|consent_revoke|account"
        text target_type
        uuid target_id
        bool cascade_diaries "사용자 응답. NULL=미응답"
        text status "awaiting_user|running|completed|failed"
        text steps_done "완료 단계 배열 — 재개 지점"
        int attempts
        text last_error
        timestamptz completed_at
    }
